[package]
name = "tvl-rocksdb"
version = "0.1.0"
edition = "2021"
description = "Rust binding of RocksDB's C++ API"
authors = ["Khalani Dev"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
moveit = "0.6.0"
