[package]
name = "tvl-rocksdb"
version = "0.1.0"
edition = "2021"
description = "Rust binding of RocksDB's C++ API"
authors = ["Khalani Dev"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
tvl-librocksdb-sys = { path = "librocksdb-sys", version = "8.11.3"}
moveit = "0.6.0"

[dev-dependencies]
tempfile = "3.10.1"

[workspace]
members = ["librocksdb-sys"]

[profile.release]
lto = true
