[package]
name = "tvl-librocksdb-sys"
version = "8.11.3"
edition = "2021"
description = "Bindings to RocksDB used by the cozo crate"
authors = ["Khalani Dev", "Guanhao Yin", "Ziyang Hu"]
license = "MIT/Apache-2.0/BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.69"
miette = "7.2.0"
libc = "0.2"
lz4-sys = { version = "1.9", optional = true }
zstd-sys = { version = "2.0", features = ["zdict_builder"], optional = true }
autocxx = "0.26.0"

[features]
default = ["snappy"]
io-uring = ["pkg-config"]
snappy = []
lz4 = ["lz4-sys"]
zstd = ["zstd-sys"]

[build-dependencies]
cxx-build = "1.0.69"
pkg-config = { version = "0.3.25", optional = true }
cc = { version = "1.0", features = ["parallel"] }
autocxx-build = "0.26"
